--- a/dot/templates/board_list.html
+++ b/dot/templates/board_list.html
@@ -7,17 +7,30 @@
     <title>Just Dot It</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+
 </head>
 <body>
 
 <div class="container my-3">
-    <h1>Just Dot It</h1>
+    <h1><a href="{% url 'board_list' %}" style="color: black; text-decoration: none;">Just Dot It</a></h1>
+
+    <!-- Search Form -->
+    <form method="get" class="mb-3">
+        <div class="input-group">
+            <input type="text" name="information" class="form-control" placeholder="Search by information" value="{{ search_query }}">
+            <div class="input-group-append">
+                <button class="btn btn-outline-secondary" type="submit">Search</button>
+            </div>
+        </div>
+    </form>
+
     <table class="table">
         <thead>
             <tr class="table-dark">
-                <th>ID</th>
+                <th>No.</th>
+                <th>Name</th>
                 <th>Address</th>
-                <th>Text</th>
+                <th>Details</th>
                 <th>Image</th>
                 <th>Result</th>
                 <th>Report</th>
@@ -27,26 +40,31 @@
         </thead>
         <tbody>
             {% if image_list %}
-            {% for image in page_obj %}
-            <tr>
-                <td>{{ image.id }}</td>
-                <td>{{ image.address }}</td>
-                <td>{{ image.text }}</td>
-                <td><img src="{{ image.image.url }}" alt="Image" width="100" height="100"></td>
-                <td>{{ image.result }}</td>
-                <td>{{ image.report }}</td>
-                <td>{{ image.information }}</td>
-                <td>{{ image.time }}</td>
-            </tr>
-            {% empty %}
-            <tr>
-                <td colspan="8">데이터가 없습니다.</td>
-            </tr>
-            {% endfor %}
+                {% for image in page_obj %}
+                    {% if image.report %}
+                        <tr>
+                            <td>{{ forloop.counter0|add:page_obj.start_index }}</td>
+                             <!--<td>{{ image.id }}</td>-->
+                            <td>{{ image.name }}</td>
+                            <td>{{ image.address }}</td>
+                            <td>{{ image.text }}</td>
+                            <td><img src="{{ image.image.url }}" alt="Image" width="100" height="100"></td>
+                            <td>{{ image.result }}</td>
+                            <td>{{ image.report }}</td>
+                            <td>{{ image.information }}</td>
+                            <td>{{ image.time }}</td>
+                        </tr>
+                    {% endif %}
+                {% endfor %}
+                {% if not page_obj %}
+                    <tr>
+                        <td colspan="9">데이터가 없습니다.</td>
+                    </tr>
+                {% endif %}
             {% else %}
-            <tr>
-                <td colspan="8">데이터가 없습니다.</td>
-            </tr>
+                <tr>
+                    <td colspan="9">데이터가 없습니다.</td>
+                </tr>
             {% endif %}
         </tbody>
     </table>
@@ -56,7 +74,7 @@
         <!-- Previous page -->
         {% if page_obj.has_previous %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ page_obj.previous_page_number }}">이전</a>
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}&information={{ search_query }}">이전</a>
         </li>
         {% else %}
         <li class="page-item disabled">
@@ -73,7 +91,7 @@
                     </li>
                 {% else %}
                     <li class="page-item">
-                        <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+                        <a class="page-link" href="?page={{ page_number }}&information={{ search_query }}">{{ page_number }}</a>
                     </li>
                 {% endif %}
             {% endif %}
@@ -82,7 +100,7 @@
         <!-- Next page -->
         {% if page_obj.has_next %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ page_obj.next_page_number }}">다음</a>
+            <a class="page-link" href="?page={{ page_obj.next_page_number }}&information={{ search_query }}">다음</a>
         </li>
         {% else %}
         <li class="page-item disabled">
@@ -90,8 +108,6 @@
         </li>
         {% endif %}
     </ul>      
-          
-    
 </div>
 
 </body>
