--- a/dot/templates/board_list.html
+++ b/dot/templates/board_list.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Just Dot It</title>
+    <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
 
@@ -17,7 +18,7 @@
     <!-- Search Form -->
     <form method="get" class="mb-3">
         <div class="input-group">
-            <input type="text" name="information" class="form-control" placeholder="Search by information" value="{{ search_query }}">
+            <input type="text" name="name" class="form-control" placeholder="Search by name" value="{{ search_query }}">
             <div class="input-group-append">
                 <button class="btn btn-outline-secondary" type="submit">Search</button>
             </div>
@@ -74,7 +75,7 @@
         <!-- Previous page -->
         {% if page_obj.has_previous %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ page_obj.previous_page_number }}&information={{ search_query }}">이전</a>
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}&name={{ search_query }}">이전</a>
         </li>
         {% else %}
         <li class="page-item disabled">
@@ -91,7 +92,7 @@
                     </li>
                 {% else %}
                     <li class="page-item">
-                        <a class="page-link" href="?page={{ page_number }}&information={{ search_query }}">{{ page_number }}</a>
+                        <a class="page-link" href="?page={{ page_number }}&name={{ search_query }}">{{ page_number }}</a>
                     </li>
                 {% endif %}
             {% endif %}
@@ -100,7 +101,7 @@
         <!-- Next page -->
         {% if page_obj.has_next %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ page_obj.next_page_number }}&information={{ search_query }}">다음</a>
+            <a class="page-link" href="?page={{ page_obj.next_page_number }}&name={{ search_query }}">다음</a>
         </li>
         {% else %}
         <li class="page-item disabled">
